# libvc-gdm70x

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.rst  bootstrap.sh  configure.ac  configure.in  libvc-gdm70x.pc.in
src/: Makefile.am  libvc-gdm70x.c  vc-gdm70x.c  vc-gdm70x.h
